--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19.2",
+        "axios": "^0.21.1",
         "bootstrap": "^4.5.2",
         "cross-env": "^7.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.5",
         "lodash": "^4.17.20",
         "popper.js": "^1.12",
-        "resolve-url-loader": "^2.3.1",
+        "resolve-url-loader": "^3.1.2",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
         "vue": "^2.6.12",
@@ -29,9 +29,12 @@
         "datatables.net-bs4": "^1.10.21",
         "jquery": "^3.5.1",
         "jquery-ui": "^1.12.1",
+        "laravel-echo": "^1.10.0",
+        "laravel-echo-server": "^1.6.2",
         "noty": "^3.2.0-beta",
         "popper.js": "^1.16.1",
         "postcss-loader": "^3.0.0",
+        "socket.io-client": "^2.3.1",
         "summernote": "^0.8.18",
         "toastr": "^2.1.4"
     }
