모델 네임스페이스 오류 수정, 일반, 관리자 레이아웃 분리, 레이아웃 파일에 css, js 기본로딩으로 변경 후 템플릿에서 삭제

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/mix/js/app.js": "/mix/js/app.js",
     "/mix/css/app.css": "/mix/css/app.css",
+    "/mix/js/axiosOption.js": "/mix/js/axiosOption.js",
     "/mix/js/bootstrap.bundle.min.js": "/mix/js/bootstrap.bundle.min.js",
     "/mix/js/dataTables.bootstrap4.min.js": "/mix/js/dataTables.bootstrap4.min.js",
     "/mix/js/manifest.js": "/mix/js/manifest.js",
