노드 버전 변경으로 인한 데이터 수정

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,15 +1,20 @@
 {
     "/mix/js/app.js": "/mix/js/app.js",
-    "/mix/css/app.css": "/mix/css/app.css",
-    "/mix/js/axiosOption.js": "/mix/js/axiosOption.js",
     "/mix/js/bootstrap.bundle.min.js": "/mix/js/bootstrap.bundle.min.js",
     "/mix/js/dataTables.bootstrap4.min.js": "/mix/js/dataTables.bootstrap4.min.js",
-    "/mix/js/manifest.js": "/mix/js/manifest.js",
-    "/mix/js/summernote.min.js": "/mix/js/summernote.min.js",
-    "/mix/js/vendor.js": "/mix/js/vendor.js",
-    "/mix/css/toastr.css": "/mix/css/toastr.css",
     "/mix/js/vueBoard.js": "/mix/js/vueBoard.js",
+    "/mix/js/axiosOption.js": "/mix/js/axiosOption.js",
+    "/mix/js/manifest.js": "/mix/js/manifest.js",
+    "/mix/js/vendor.css": "/mix/js/vendor.css",
+    "/mix/js/vendor.js": "/mix/js/vendor.js",
+    "/mix/css/app.css": "/mix/css/app.css",
+    "/mix/js/summernote.min.js": "/mix/js/summernote.min.js",
     "/mix/css/summernote.min.css": "/mix/css/summernote.min.css",
+    "/mix/css/font/summernote.eot": "/mix/css/font/summernote.eot",
+    "/mix/css/font/summernote.hash": "/mix/css/font/summernote.hash",
+    "/mix/css/font/summernote.ttf": "/mix/css/font/summernote.ttf",
+    "/mix/css/font/summernote.woff": "/mix/css/font/summernote.woff",
+    "/mix/css/font/summernote.woff2": "/mix/css/font/summernote.woff2",
     "/mix/css/main.css": "/mix/css/main.css",
     "/mix/css/dataTables.bootstrap4.min.css": "/mix/css/dataTables.bootstrap4.min.css"
 }
