--- a/package.json
+++ b/package.json
@@ -2,40 +2,40 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.21.1",
-        "bootstrap": "^4.5.2",
-        "cross-env": "^7.0",
-        "jquery": "^3.2",
-        "laravel-mix": "^5.0.5",
-        "lodash": "^4.17.20",
+        "axios": "^0.21.4",
+        "bootstrap": "^4.6.1",
+        "cross-env": "^7.0.3",
+        "jquery": "^3.6.0",
+        "laravel-mix": "^6.0.39",
+        "lodash": "^4.17.21",
         "popper.js": "^1.12",
-        "resolve-url-loader": "^3.1.2",
-        "sass": "^1.20.1",
+        "resolve-url-loader": "^3.1.4",
+        "sass": "^1.45.1",
         "sass-loader": "^8.0.0",
-        "vue": "^2.6.12",
-        "vue-template-compiler": "^2.6.12"
+        "vue": "^2.6.14",
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.14.0",
         "css-loader": "^3.6.0",
         "datatables.net-bs4": "^1.10.21",
-        "jquery": "^3.5.1",
         "jquery-ui": "^1.12.1",
-        "laravel-echo": "^1.10.0",
+        "laravel-echo": "^1.11.3",
         "laravel-echo-server": "^1.6.2",
         "noty": "^3.2.0-beta",
         "popper.js": "^1.16.1",
         "postcss-loader": "^3.0.0",
-        "socket.io-client": "^2.3.1",
-        "summernote": "^0.8.18",
+        "socket.io-client": "2.3.1",
+        "summernote": "^0.8.20",
         "toastr": "^2.1.4"
     }
 }
