--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.3.0|^8.0",
+        "beyondcode/laravel-websockets": "^1.12",
+		"pusher/pusher-php-server": "^4.1.1",
         "fideloper/proxy": "^4.2",
         "firebase/php-jwt": "^5.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "guzzlehttp/psr7": "^1.5",
         "laravel/framework": "^8.0",
         "laravel/sanctum": "^2.9",
         "laravel/tinker": "^2.0",
