--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
         "noty": "^3.2.0-beta",
         "popper.js": "^1.16.1",
         "postcss-loader": "^3.0.0",
-        "socket.io-client": "2.3.1",
+        "pusher-js": "^7.0.3",
+        "socket.io-client": "^2.4.0",
         "summernote": "^0.8.20",
         "toastr": "^2.1.4"
     }
