--- a/composer.json
+++ b/composer.json
@@ -8,26 +8,25 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3.0|^8.0",
+        "php": "^8.0.2",
         "beyondcode/laravel-websockets": "^1.12",
-		"pusher/pusher-php-server": "^4.1.1",
-        "fideloper/proxy": "^4.2",
         "firebase/php-jwt": "^5.2",
-        "fruitcake/laravel-cors": "^1.0",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "fruitcake/laravel-cors": "^2.0.5",
+        "guzzlehttp/guzzle": "^7.2",
         "guzzlehttp/psr7": "^1.5",
-        "laravel/framework": "^8.0",
+        "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.9",
-        "laravel/tinker": "^2.0",
+        "laravel/tinker": "^2.7",
         "laravel/ui": "^3.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "pusher/pusher-php-server": "^4.1.1"
     },
     "require-dev": {
-        "facade/ignition": "^2.3.6",
-        "fzaninotto/faker": "^1.9.1",
-        "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^9.0"
+        "fakerphp/faker": "^1.9.1",
+        "mockery/mockery": "^1.4.4",
+        "nunomaduro/collision": "^6.1",
+        "phpunit/phpunit": "^9.5.10",
+        "spatie/laravel-ignition": "^1.0"
     },
     "config": {
         "optimize-autoloader": true,
